--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "echarts": "^4.1.0",
+    "flv.js": "^1.5.0",
     "ng-zorro-antd": "^7.0.1",
     "ngx-echarts": "^4.1.0",
     "ngx-infinite-scroll": "^7.1.0",
